--- a/1-components/src/app/course-card/course-card.component.html
+++ b/1-components/src/app/course-card/course-card.component.html
@@ -3,7 +3,7 @@
     <div class="course-card">
 
         <div class="course-title">
-            {{value.description}}
+            {{cardIndex + ' ' + value.description}}
         </div>
         <img width="300" alt="Angular Logo"
              [src]="value.iconUrl">
