--- a/1-components/src/app/app.component.html
+++ b/1-components/src/app/app.component.html
@@ -11,6 +11,15 @@
 <course-card (click)="onCourseCardClicked()" [value]="ngrxCourse"></course-card> -->
 
 <!-- courseSelected is a custom browser event emitted from Child component-->
-<course-card (courseSelected)="onCourseSelected($event)" [value]="coreCourse"></course-card>
+<!-- <course-card (courseSelected)="onCourseSelected($event)" [value]="coreCourse"></course-card>
 <course-card (courseSelected)="onCourseSelected($event)" [value]="rxjsCourse"></course-card>
-<course-card (courseSelected)="onCourseSelected($event)" [value]="ngrxCourse"></course-card>
+<course-card (courseSelected)="onCourseSelected($event)" [value]="ngrxCourse"></course-card> -->
+
+<course-card *ngFor="let course of courses;index as i;first as isFirst;last as isLast; even as isEven; odd as isOdd"
+(courseSelected)="onCourseSelected($event)" 
+[class.is-first] = "isFirst"
+[class.is-last] = "isLast"
+[class.is-even] = "isEven"
+[class.is-odd] = "isOdd"
+[value]="course" [cardIndex]="i + 1"></course-card>
+
