--- a/1-components/src/app/course-card/course-card.component.html
+++ b/1-components/src/app/course-card/course-card.component.html
@@ -1,32 +1,36 @@
-<div class="courses" *ngIf="value">
-
+<ng-container *ngIf="value">
     <div class="course-card" [ngClass]="cardClasses()">
+            <div class="course-title" [ngStyle]="cardStyles()">
+                {{cardIndex + ' ' + value.description}}
+            </div>
+            <img width="300" alt="Angular Logo" *ngIf="value.iconUrl; else noImage"
+                 [src]="value.iconUrl">
+    
+            <ng-template #noImage>
+                <p>No image is available</p>
+            </ng-template>
+    
+            <div class="course-description">
+                {{value.longDescription}}
+            </div>
 
-        <div class="course-title" [ngStyle]="cardStyles()">
-            {{cardIndex + ' ' + value.description}}
-        </div>
-        <img width="300" alt="Angular Logo" *ngIf="value.iconUrl; else noImage"
-             [src]="value.iconUrl">
+            <ng-container [ngSwitch]="value.category">
+                <div class="course-category" >
 
-        <ng-template #noImage>
-            <p>No image is available</p>
-        </ng-template>
-
-        <div class="course-description">
-            {{value.longDescription}}
-        </div>
-
-        <div class="course-category" [ngSwitch]="value.category">
-            <div class="category" *ngSwitchCase="'BEGINNER'">Beginner</div>
-            <div class="category" *ngSwitchCase="'INTERMEDIATE'">Intermediate</div>
-            <div class="category" *ngSwitchCase="'ADVANCED'">Advanced</div>
-            <div class="category" *ngSwitchDefault="'ADVANCED'">All levels</div>
-        </div>
-
+                    <ng-container *ngSwitchCase="'BEGINNER'">
+                        <div class="category" >Beginner</div>
+                    </ng-container>
+                    
+                    <div class="category" *ngSwitchCase="'INTERMEDIATE'">Intermediate</div>
+                    <div class="category" *ngSwitchCase="'ADVANCED'">Advanced</div>
+                    <div class="category" *ngSwitchDefault="'ADVANCED'">All levels</div>
+                </div> 
+            </ng-container>
+    
+          
+        <button (click)="onCourseViewed()">View Course</button>
     </div>
+</ng-container>
 
-    <button (click)="onCourseViewed()">View Course</button>
 
-
-</div>
 
