ViewChild decorator using Component class

--- a/1-components/src/app/course-card/course-card.component.html
+++ b/1-components/src/app/course-card/course-card.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="value">
     <div class="course-card" [ngClass]="cardClasses()">
             <div class="course-title" [ngStyle]="cardStyles()">
-                {{cardIndex + ' ' + value.description}}
+                {{cardIndex || '' + ' ' + value.description}}
             </div>
             <img width="300" alt="Angular Logo" *ngIf="value.iconUrl; else noImage"
                  [src]="value.iconUrl">
