--- a/1-components/src/app/app.component.html
+++ b/1-components/src/app/app.component.html
@@ -18,7 +18,7 @@
 <course-card (courseSelected)="onCourseSelected($event)" [value]="rxjsCourse"></course-card>
 <course-card (courseSelected)="onCourseSelected($event)" [value]="ngrxCourse"></course-card> -->
 
-<course-card
+<!-- <course-card
   *ngFor="
     let course of courses;
     index as i;
@@ -34,4 +34,13 @@
   [class.is-odd]="isOdd"
   [value]="course"
   [cardIndex]="i + 1"
-></course-card>
+></course-card> -->
+
+
+<course-card (courseSelected)="onCourseSelected($event)" [value]="courses[1]">
+
+</course-card>
+
+<course-card (courseSelected)="onCourseSelected($event)" [value]="courses[2]">
+
+</course-card>
