--- a/1-components/src/app/app.component.html
+++ b/1-components/src/app/app.component.html
@@ -41,7 +41,7 @@
 <div class="courses" *ngIf="courses[1] as course">
   <course-card [value]="course" (courseSelected)="onCourseSelected($event)">
     <h5>5 Lessons</h5>
-    <div class="course-image">
+    <div class="course-image" #courseImage>
       <img width="300" alt="Angular Logo" [src]="course.iconUrl" />
     </div>
 
