--- a/1-components/src/app/course-card/course-card.component.html
+++ b/1-components/src/app/course-card/course-card.component.html
@@ -1,29 +1,26 @@
 <ng-container *ngIf="value">
-    <div class="course-card" [ngClass]="cardClasses()">
-            <div class="course-title" [ngStyle]="cardStyles()">
-                {{cardIndex || '' + ' ' + value.description}}
-            </div>
-           <ng-content select=".course-image"></ng-content>
-           <ng-content select=".course-description"></ng-content>
-           <ng-content></ng-content>
-
-            <ng-container [ngSwitch]="value.category">
-                <div class="course-category" >
-
-                    <ng-container *ngSwitchCase="'BEGINNER'">
-                        <div class="category" >Beginner</div>
-                    </ng-container>
-                    
-                    <div class="category" *ngSwitchCase="'INTERMEDIATE'">Intermediate</div>
-                    <div class="category" *ngSwitchCase="'ADVANCED'">Advanced</div>
-                    <div class="category" *ngSwitchDefault="'ADVANCED'">All levels</div>
-                </div> 
-            </ng-container>
-    
-          
-        <button (click)="onCourseViewed()">View Course</button>
+  <div class="course-card" [ngClass]="cardClasses()">
+    <div class="course-title" [ngStyle]="cardStyles()">
+      {{ cardIndex || "" + " " + value.description }}
     </div>
+
+    <!-- <ng-content select=".course-image"></ng-content> -->
+    <ng-content select="course-image"></ng-content>
+    <ng-content select=".course-description"></ng-content>
+    <ng-content></ng-content>
+
+    <ng-container [ngSwitch]="value.category">
+      <div class="course-category">
+        <ng-container *ngSwitchCase="'BEGINNER'">
+          <div class="category">Beginner</div>
+        </ng-container>
+
+        <div class="category" *ngSwitchCase="'INTERMEDIATE'">Intermediate</div>
+        <div class="category" *ngSwitchCase="'ADVANCED'">Advanced</div>
+        <div class="category" *ngSwitchDefault="'ADVANCED'">All levels</div>
+      </div>
+    </ng-container>
+
+    <button (click)="onCourseViewed()">View Course</button>
+  </div>
 </ng-container>
-
-
-
