--- a/1-components/src/app/course-card/course-card.component.html
+++ b/1-components/src/app/course-card/course-card.component.html
@@ -4,8 +4,14 @@
       {{ cardIndex || "" + " " + value.description }}
     </div>
 
+    <!-- ng template -->
+    <ng-template #blankImage>
+      <p class="warn">{{value.description}} No image is available yet</p>
+      <img src="/assets/empty-image.png">
+    </ng-template>
+
     <!-- <ng-content select=".course-image"></ng-content> -->
-    <ng-content select="course-image"></ng-content>
+    <ng-content select="course-image" *ngIf="value.iconUrl else blankImage"></ng-content>
     <ng-content select=".course-description"></ng-content>
     <ng-content></ng-content>
 
