*ngTemplateOutlet and ng-container

--- a/1-components/src/app/app.component.html
+++ b/1-components/src/app/app.component.html
@@ -45,9 +45,9 @@
     <img src="/assets/empty-image.png" />
   </ng-template>
 
-  <div
+  <ng-container
     *ngTemplateOutlet="blankImage; context: { description: course.description }"
-  ></div>
+  ></ng-container>
 
   <course-card [value]="course" (courseSelected)="onCourseSelected($event)">
     <h5>5 Lessons</h5>
