--- a/2-Directives/src/app/app.component.html
+++ b/2-Directives/src/app/app.component.html
@@ -14,7 +14,10 @@
     (toggleHighlight)="onToggleHighlight($event)"
     #highlightDir="hl"
   >
-    <course-image [src]="course.iconUrl"></course-image>
+    <course-image
+      [src]="course.iconUrl"
+      *ngxUnless="!course.iconUrl"
+    ></course-image>
 
     <div class="course-description" (dblclick)="highlightDir.toggle()">
       {{ course.longDescription }}
